--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Blog</title>
-  <link rel="stylesheet" href="/css/jass.css">
-</head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"></head>
 
 <body>
   <header class="display-flex justify-space-between align-center p-2">
@@ -17,11 +16,19 @@
     <!-- If the user is Logged in, then the logout button is available.--->
     {{#if logged_in}}
     <nav>
-      <button class="btn" id="logout">logout</button>
+      <button class="button is-text" d="homeBtn">Home</button>
+      <button class="button is-text" id="dashboardBtn">Dashboard</button>
+      <button class="button is-text" id="logoutBtn">Logout</button>
+    </nav>
+    {{else}}
+     <nav>
+      <button class="button is-text" id="homeBtn">Home</button>
+      <button class="button is-text" id="dashboardBtn">Dashboard</button>
+      <button class="button is-text" id="loginBtn">Login</button>  
     </nav>
     {{/if}}
   </header>
-  <main class="container container-fluid mt-5">
+  <main class="box">
     {{{ body }}}
   </main>
   <footer>
@@ -31,6 +38,8 @@
   <!-- TODO: Add a comment describing the functionality of this helper -->
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
+  {{else}}
+  <script src="/js/login.js"></script>
   {{/if}}
 </body>
 
