added blogs to be rendered when initially visiting homepage: " "

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
 <div class="card">
     <header class="card-header">
     <p class="card-header-title">
-        {{blog.title}}
+        {{blog.title}} submitted by {{user.username}}
     </p>
   <div class="card-content">
     <div class="content">
