added links to buttons on site

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,8 +13,8 @@
       Tech Blog
     </h1>
         <nav>
-           <button class="button is-text" d="homeBtn">Home</button>
-           <button class="button is-text" id="dashboardBtn">Dashboard</button>
+           <button class="button is-text" d="homeBtn"><a href='/'>Home</a></button>
+           <button class="button is-text" id="dashboardBtn"><a href='/user'>Dashboard</a></button>
     {{#if logged_in}}
            <button class="button is-text" id="logoutBtn">Logout</button>
     {{else}}
