--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
             <input class="input" type="text" id="loginPassword" placeholder="***********">
         </div>
         <button class="button is-primary" id="loginBtn">Login</button>
-        <button class="button is-info" id="signupBtn">Sign up</button>
+        <button class="button is-warning" id="signupBtn"><a href='/signup'>Sign up</a></button>
         </div>
 </form>
 
