--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -18,8 +18,7 @@
             <input class="input" type="text" id="signupConfirm" placeholder="Confirm password here">
         </div>
         <button class="button is-primary" id="newSignup">Sign up</button>
-        <button class="button is-info" id="returnLogin">Wait I have an account...</button>
         </div>
 </form>
 
-<script src="/js/login.js"></script>
+<script src="/js/signup.js"></script>
