--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,7 @@
            <button class="button is-text" id="dashboardBtn"><a href='/user'>Dashboard</a></button>
     {{#if logged_in}}
            <button class="button is-text" id="logoutBtn">Logout</button>
+           <p>Hi {{req.session.username}}</p>
     {{else}}
            <button class="button is-text" id="loginBtn"><a href='/login'>Login</a></button>  
     {{/if}}
