--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<form>
+<form id="signupForm">
     <h3>Sign up</h3>
         <dsiv class="field">
         <label class="label">Username</label>
@@ -17,7 +17,7 @@
         <div class="control">
             <input class="input" type="text" id="signupConfirm" placeholder="Confirm password here">
         </div>
-        <button class="button is-primary" id="newSignup">Sign up</button>
+        <button type="submit" class="button is-primary" id="newSignup">Sign up</button>
         </div>
 </form>
 
