--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,10 +14,10 @@
     </h1>
         <nav>
            <button class="button is-text" d="homeBtn"><a href='/'>Home</a></button>
-           <button class="button is-text" id="dashboardBtn"><a href='/user'>Dashboard</a></button>
+           <button class="button is-text" id="dashboardBtn"><a href='/dashboard'>Dashboard</a></button>
     {{#if logged_in}}
            <button class="button is-text" id="logoutBtn">Logout</button>
-           <p>Hi {{req.session.username}}</p>
+           <p>Hi {{req.session.user.username}}</p>
     {{else}}
            <button class="button is-text" id="loginBtn"><a href='/login'>Login</a></button>  
     {{/if}}
