added dashboard.js file

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
       Tech Blog
     </h1>
         <nav>
-           <button class="button is-text" d="homeBtn"><a href='/'>Home</a></button>
+           <button class="button is-text" id="homeBtn"><a href='/'>Home</a></button>
            <button class="button is-text" id="dashboardBtn"><a href='/dashboard'>Dashboard</a></button>
     {{#if logged_in}}
            <button class="button is-text" id="logoutBtn">Logout</button>
