--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,5 @@
-<h1> Your Dashboard</h1>
+<h1>Your Dashboard</h1>
 
-<a href="/create-blog">Add new Post</a>
+<!---Add User's content here-->
+
+<button class="button is-text" id="createBlog"><a href="/create-blog">Add new Post</a></button>
