added content create-blog.handlebars

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -11,11 +11,11 @@
         </div>
           <label class="label">Password</label>
         <div class="control">
-            <input class="input" type="text" id="signupPassword" placeholder="Your password here">
+            <input class="input" type="password" id="signupPassword" placeholder="Your password here">
         </div>
         <label class="label">Confirm Password</label>
         <div class="control">
-            <input class="input" type="text" id="signupConfirm" placeholder="Confirm password here">
+            <input class="input" type="password" id="signupConfirm" placeholder="Confirm password here">
         </div>
         <button type="submit" class="button is-primary" id="newSignup">Sign up</button>
         </div>
