--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,7 +7,7 @@
         </div>
         <label class="label">Password</label>
         <div class="control">
-            <input class="input" type="text" id="loginPassword" placeholder="***********">
+            <input class="input" type="password" id="loginPassword" placeholder="***********">
         </div>
         <button class="button is-primary" id="loginBtn">Login</button>
         <button class="button is-warning" id="signupBtn"><a href='/signup'>Sign up</a></button>
