changed href so that create-blog would actually eventuate as a page

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -16,4 +16,4 @@
 </div>
 {{/each}}
 
-<button class="button is-text" id="createBlog"><a href="/create-blog">Add new Post</a></button>
+<button class="button is-text" id="createBlog"><a href="/dashboard/create-blog">Add new Post</a></button>
