--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,7 +11,7 @@
     <div class="content">
         {{blog.content}}
     </div>
-        <p><a href="/dashboard/add-comment">Add/View Comment</a></p>
+        <p><a href="/dashboard/blog-post-info">See More</a></p>
   </div>
 </div>
 {{/each}}
