--- a/views/blog-post-info.handlebars
+++ b/views/blog-post-info.handlebars
@@ -1,32 +1,34 @@
 <div class="card">
     <header class="card-header">
     <p class="card-header-title column is-one-fifth">
-        {{blog.title}}
+        {{title}}
     </p>
     <p class="column is-one-fifth">
-      submitted by {{user.username}} on {{blog.date_created}}
+      submitted by {{user.username}} on {{date_created}}
     </p>
   <div class="card-content">
     <div class="content">
-        {{blog.content}}
+        {{content}}
     </div>
   </div>
 </div>
 
-
-
-<h1>Add a comment</h1>
+<br>
 
 <form id="newComment">
     <div class="field">
-    <label class="label">Content</label>
+    <label class="label">Add Comment</label>
     <div class="control">
         <textarea class="textarea" id="commentInput" placeholder="Textarea"></textarea>
     </div>
 
-    <button class="button is-primary" id="newBlogBtn">Add comment</button>
+    <button class="button is-primary" id="newBlogBtn">Submit</button>
         
     </div>
 </form>
+
+{{#each comments as |comment|}}
+{{>show-comments}}
+{{/each}}
 
 <script src="/js/newComment.js"></script>
