reviewed content to post blogs, checking for deployment

--- a/views/blog-post-info.handlebars
+++ b/views/blog-post-info.handlebars
@@ -21,9 +21,8 @@
     <div class="control">
         <textarea class="textarea" id="commentInput" placeholder="Textarea"></textarea>
     </div>
-
-    <button class="button is-primary" id="newBlogBtn">Submit</button>
-        
+    <br>
+    <button class="button is-primary" id="newBlogBtn">Submit</button>     
     </div>
 </form>
 
@@ -31,4 +30,4 @@
 {{>show-comments}}
 {{/each}}
 
-<script src="/js/newComment.js"></script>
+<script src="/js/addComment.js"></script>
