updating partials and providing blog_id for new comments posted

--- a/views/partials/show-comments.handlebars
+++ b/views/partials/show-comments.handlebars
@@ -2,8 +2,8 @@
 <div class="card">
   <div class="card-content">
     <div class="content">
-        <p>{{comment.content}}</p>
-        <p>- {{user.username}}, {{comment.date_created}}</p>
+        <p>{{content}}</p>
+        <p>- {{username}}, {{date_created}}</p>
     </div>
   </div>
 </div>
