added route to facilitate blog-update page

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -11,7 +11,7 @@
     <div class="content">
         {{blog.content}}
     </div>
-    <p><a href="/dashboard/blog-update">Update/Delete Post</a></p>
+    <p><a href="/dashboard/blog-update/{{blog.id}}">Update/Delete Post</a></p>
   </div>
 </div>
 {{/each}}
