--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,7 @@
         {{blog.title}}
     </p>
     <p class="column is-one-fifth">
-      submitted by {{user.username}} on {{blog.date_created}}
+      submitted by {{user.username}} on {{format_date blog.date_created}}
     </p>
   <div class="card-content">
     <div class="content">
