--- a/views/partials/show-comments.handlebars
+++ b/views/partials/show-comments.handlebars
@@ -3,7 +3,7 @@
   <div class="card-content">
     <div class="content">
         <p>{{content}}</p>
-        <p>- {{user.username}}, {{date_created}}</p>
+        <p>- {{user.username}}, {{format_date date_created}}</p>
     </div>
   </div>
 </div>
