--- a/views/blog-post-info.handlebars
+++ b/views/blog-post-info.handlebars
@@ -4,7 +4,7 @@
         {{title}}
     </p>
     <p class="column is-one-fifth">
-      submitted by {{user.username}} on {{format_date date_created}}
+      {{user.username}} on {{format_date date_created}}
     </p>
   <div class="card-content">
     <div class="content">
