--- a/views/blog-update.handlebars
+++ b/views/blog-update.handlebars
@@ -4,11 +4,11 @@
     <div class="field">
     <label class="label">Title</label>
     <div class="control">
-        <input class="input" id="titleInput" type="text" value="{{blog.title}}">
+        <input class="input" id="titleInput" type="text" value="{{title}}">
     </div>
     <label class="label">Content</label>
     <div class="control">
-        <textarea class="textarea" id="contentInput" placeholder="Textarea" value="{{blog.content}}"></textarea>
+        <textarea class="textarea" id="contentInput" placeholder="Textarea" value="{{content}}"></textarea>
     </div>
 
     <button class="button is-primary" type="submit" id="updateBlogBtn">Update Post</button>
